--- a/index.html
+++ b/index.html
@@ -181,22 +181,22 @@
         <form>
             <div class="form-group">
                 <label for="nombre">1️⃣ ¿Cuál es tu nombre? </label>
-                <input type="text" id="nombre" name="nombre" placeholder="Tu respuesta">
+                <input type="text" id="nombre" name="nombre" placeholder="Tu respuesta" required>
             </div>
 
             <div class="form-group">
                 <label for="pais">2️⃣ ¿De qué pais nos visitas? 🇵🇪 🇨🇴 🇪🇨 🇲🇽 🇨🇱 🇧🇴 🇬🇹</label>
-                <input type="text" id="pais" name="pais" placeholder="Tu respuesta">
+                <input type="text" id="pais" name="pais" placeholder="Tu respuesta" required>
             </div>
 
             <div class="form-group">
                 <label for="telefono">3️⃣ Tu Teléfono </label>
-                <input type="tel" id="telefono" name="telefono" placeholder="Tu respuesta">
+                <input type="tel" id="telefono" name="telefono" placeholder="Tu respuesta" required>
             </div>
 
             <div class="form-group">
                 <label for="asesor">4️⃣ Ya sabes que Alberto Salinas es tu Asesor? 😎</label>
-                <select id="asesor" name="asesor">
+                <select id="asesor" name="asesor" required>
                     <option value="" disabled selected hidden>Selecciona una opción</option>
                     <option value="si">Sí, Alberto es mi Asesor 😊✅</option>
                     <option value="no">No sé quien es mi Asesor 😰❌</option>
@@ -205,7 +205,7 @@
 
             <div class="form-group">
                 <label for="formulario-importancia">5️⃣ Sabías que el formulario de Patronaje es importante para que aprendas tu primera toma de medidas y hacer tu primer patrón de costura? ✂️👚</label>
-                <select id="formulario-importancia" name="formulario-importancia">
+                <select id="formulario-importancia" name="formulario-importancia" required>
                     <option value="" disabled selected hidden>Selecciona una opción</option>
                     <option value="no-sabia">No lo sabía, soy nueva 😊</option>
                     <option value="ahora-se">Sí lo sabía 😉</option>
@@ -214,7 +214,7 @@
 
             <div class="form-group">
                 <label for="recibiste-formulario">6️⃣ ¿Recibiste tu formulario de Patronaje Premium? 📘</label>
-                <select id="recibiste-formulario" name="recibiste-formulario">
+                <select id="recibiste-formulario" name="recibiste-formulario" required>
                     <option value="" disabled selected hidden>Selecciona una opción</option>
                     <option value="si-tengo">Sí, lo tengo gracias! 🤗✅</option>
                     <option value="no-pedi">No lo pedí 😥</option>
@@ -223,7 +223,7 @@
 
             <div class="form-group">
                 <label for="envio-whatsapp">7️⃣ ¿Deseas que el Asesor Alberto te envíe el Formulario de Patronaje por Whatsapp? 👉🏼📲</label>
-                <select id="envio-whatsapp" name="envio-whatsapp">
+                <select id="envio-whatsapp" name="envio-whatsapp" required>
                     <option value="" disabled selected hidden>Selecciona una opción</option>
                     <option value="si-necesito">Sí por favor, lo necesito 🙏🏼</option>
                     <option value="ya-tengo">Ya lo tengo! 🙌🏼</option>
@@ -232,7 +232,7 @@
 
             <div class="form-group">
                 <label for="experiencia">8️⃣ ¿Cuál es tu nivel de Experiencia? 😊</label>
-                <select id="experiencia" name="experiencia">
+                <select id="experiencia" name="experiencia" required>
                     <option value="" disabled selected hidden>Selecciona una opción</option>
                     <option value="principiante">Principiante 🐣</option>
                     <option value="intermedio">Intermedio 🤗</option>
@@ -242,41 +242,32 @@
 
             <div class="form-group">
                 <label for="sesion-temor">9️⃣ ¿Estas list@ para tu primera sesión 👩🏻‍🎓👨‍🎓 o tienes un poco de temor 😨?</label>
-                <input type="text" id="sesion-temor" name="sesion-temor" placeholder="Tu respuesta">
+                <input type="text" id="sesion-temor" name="sesion-temor" placeholder="Tu respuesta" required>
             </div>
 
             <div class="form-group">
                 <label for="prenda">1️⃣0️⃣ ¿Que prenda de vestir te gustaría aprender? 👗👖👕👚</label>
-                <input type="text" id="prenda" name="prenda" placeholder="Tu respuesta">
+                <input type="text" id="prenda" name="prenda" placeholder="Tu respuesta" required>
             </div>
 
             <div class="form-group">
                 <label for="no-gusta">1️⃣1️⃣ ¿Qué es lo que no te gusta en el grupo? 😰</label>
-                <input type="text" id="no-gusta" name="no-gusta" placeholder="Tu respuesta">
+                <input type="text" id="no-gusta" name="no-gusta" placeholder="Tu respuesta" required>
             </div>
 
             <div class="form-group">
                 <label for="maestra-isabel">1️⃣2️⃣ Ya conocías a la Maestra Isabel? 💁🏻‍♀️✂️👚</label>
-                <input type="text" id="maestra-isabel" name="maestra-isabel" placeholder="Tu respuesta">
+                <input type="text" id="maestra-isabel" name="maestra-isabel" placeholder="Tu respuesta" required>
             </div>
 
             <div class="form-group">
                 <label for="mensaje">1️⃣3️⃣ Envíanos un mensaje</label>
-                <textarea id="mensaje" name="mensaje" onblur="clearIfEmpty(this)"></textarea>
+                <textarea id="mensaje" name="mensaje" required></textarea>
             </div>
             
             <button type="submit" class="submit-button">Enviar Respuesta</button>
         </form>
     </div>
 </div>
-
-<script>
-    function clearIfEmpty(element) {
-        if (element.value === "") {
-            element.value = "";
-        }
-    }
-</script>
-
 </body>
 </html>
